[project]
name = "anchorscad-bullet"
version = "0.1.0"
description = "AnchorSCAD to PyBullet mesh converter."
readme = "README.md"
authors = [
    { name = "Gianni Mariani", email = "owebeeone@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
